# robotnik_ptu

./: CMakeLists.txt  README.md  package.xml
config/: dynamixel_joint_controllers.yaml  joint_trajectory_controller.yaml
config/robotnik_trajectory_control/: robotnik_ptu_interfaces.yaml
launch/: controller_manager.launch  controller_spawner.launch  robotnik_ptu.launch  start_meta_controller.launch  start_pan_controller.launch  xtion_rgbd.launch
launch/dynamixel/: robotnik_ptu_dynamixel.launch
launch/rtc/: robotnik_ptu_rtc.launch  start_controllers.launch
launch/rtc/robotnik_traj_control/: robotnik_trajectory_control.launch
src/: robotnik_ptu.cpp
